syntax = "proto3";

package authentication;

enum Role {
  MODERATOR = 0;
  USER = 1;
}

message Account{
  string id = 1;
  string email = 2;
  string password_hash = 3;
  Role role = 4;
  uint64 created_at = 5;
  uint64 updated_at = 6;
}

message Token {
  string account_id = 1;
  Role role = 2;
}

message SignUpRequest{
  string email = 1;
  string password = 2;
  Role role = 3;
}

message SignUpResponse{
  string access_token = 2;
  string refresh_token = 3;
}

message SignInRequest{
  string email = 1;
  string password = 2;
}

message SignInResponse{
  string access_token = 2;
  string refresh_token = 3;
}

message SignOutRequest{
  string access_token = 1;
  string refresh_token = 2;
}

message SignOutResponse{
  bool is_success = 1;
}

message ChangePasswordRequest{
  string access_token = 1;
  string refresh_token = 2;
  string new_password = 3;
}

message ChangePasswordResponse{
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshTokenRequest{
  string refresh_token = 1;
}

message RefreshTokenResponse{
  string access_token = 1;
  string refresh_token = 2;
}

message ValidateTokenRequest{
  string access_token = 1;
}

message ValidateTokenResponse{
  string payload = 1;
}

service AuthenticationService{
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc SignOut(SignOutRequest) returns (SignOutResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}